--- a/client/src/styles/nav-bar.css
+++ b/client/src/styles/nav-bar.css
@@ -4,5 +4,19 @@
     align-items: center;
 }
 
+.navigation {
+    border: 2px solid black;
+    background-color: black;
+}
+
+.nav-link{
+    text-decoration: none;
+    color: rgb(255, 232, 31);
+}
+
+.nav-link:hover {
+    color: red;
+}
+
 
 
