--- a/client/src/styles/search-box.css
+++ b/client/src/styles/search-box.css
@@ -1,9 +1,18 @@
 .search-box {
     -webkit-appearance: none;
-    border: none;
+    border: 1px solid black;
     outline: none;
+    margin-top: 10px;
     padding: 10px;
-    width: 150px;
+    width: 30%;
     line-height: 30px;
     margin-bottom: 30px;
+    height: 30px;
+    border-radius: 8px;
   }
+
+.search-box:hover {
+  border: 1px solid rgb(197, 0, 12);
+}
+
+  
